@@ -38,29 +38,17 @@ def maketokens(valuelist):
 
 if 1:
     t = u'''
-    @page {
+    @page AUTO:left {
         color: red;
         @top-LEFT {
             content: "1";
         }
-        padding: 1cm;
-        @top-riGHT {
-            content: "2";
-            /*@x {x:1}*/
-            left: 0;
-        }
-        margin: 1cm;
     }
     '''    
-    t = '@page {}'
     s = cssutils.parseString(t)
-
     p = s.cssRules[0]
-    print p
-    for m in p.cssRules:
-        print m
-        p.deleteRule(m)
-#        print i, p
+    
+    print s.cssText
     
 
     
